--- a/Data-Analytics/Spark/k8s/DataProcessTransferFts-JarLocal-3.4.0.yaml
+++ b/Data-Analytics/Spark/k8s/DataProcessTransferFts-JarLocal-3.4.0.yaml
@@ -5,25 +5,15 @@ metadata:
   namespace: spark
 spec:
   sparkConf:
-    # S3 credentials should be specified below
-    spark.hadoop.fs.s3a.endpoint: <S3 object store endpoint>
-    spark.hadoop.fs.s3a.access.key: <ID>
-    spark.hadoop.fs.s3a.secret.key: <password>
     spark.hadoop.fs.s3a.path.style.access: "true"
     spark.hadoop.fs.s3a.impl: "org.apache.hadoop.fs.s3a.S3AFileSystem"
     spark.hadoop.fs.s3a.connection.ssl.enabled: "true"
-
-    # Needed if s3 server is behind proxy
-    # spark.hadoop.fs.s3a.proxy.host: "web-proxy.corp.hpecorp.net"
-    # spark.hadoop.fs.s3a.proxy.port: "8080"
-
-    # Needed if s3 server certs are not imported to java truststore used by spark
     "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
     "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
   type: Scala
-  sparkVersion: 3.3.1
+  sparkVersion: 3.4.0
   mode: cluster
-  image: gcr.io/mapr-252711/ezaf-spark-demo-example:fy23-q1
+  image: gcr.io/mapr-252711/ezaf-spark-demo-example:fy23-q3-fts
   imagePullPolicy: Always
   mainApplicationFile: local:///tmp/DataProcessTransfer.jar
   mainClass: com.mapr.sparkdemo.DataProcessTransfer
@@ -37,24 +27,20 @@ spec:
   imagePullSecrets:
     - hpe-imagepull-secrets
   driver:
-    # Needed if object store is Amazon S3
-    # javaOptions: "-Djavax.net.ssl.trustStore=/etc/pki/java/cacerts"
     cores: 1
     coreLimit: "1000m"
     memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.0
     volumeMounts:
       - mountPath: /mounts/data/
         name: spark-data
   executor:
-    # Needed if object store is Amazon S3
-    # javaOptions: "-Djavax.net.ssl.trustStore=/etc/pki/java/cacerts"
     cores: 1
     instances: 2
     memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.0
     volumeMounts:
       - mountPath: /mounts/data
         name: spark-data
