--- a/Data-Engineering/Airflow/example_ezaf_spark_mnist.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_mnist.yaml
@@ -12,9 +12,9 @@ spec:
     "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
     "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
   type: Scala
-  sparkVersion: 3.3.1
+  sparkVersion: 3.4.0
   mode: cluster
-  image: gcr.io/mapr-252711/ezaf-spark-demo-example:v3.3.1-mnist
+  image: gcr.io/mapr-252711/ezaf-spark-demo-example:fy23-q3-mnist
   imagePullPolicy: Always
   mainApplicationFile: local:///tmp/DataTransfer.jar
   mainClass: com.mapr.sparkdemo.DataTransfer
@@ -32,7 +32,7 @@ spec:
     coreLimit: "1000m"
     memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.0
     volumeMounts:
       - mountPath: /mounts/data/
         name: spark-data
@@ -41,7 +41,7 @@ spec:
     instances: 2
     memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.0
     volumeMounts:
       - mountPath: /mounts/data
         name: spark-data
