EZAF-2354: Create GPU example for Ray

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 ### JupyterNotebooks ###
-
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
 # IPython
 profile_default/
 ipython_config.py
+
+# Idea
+.idea
