--- a/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
@@ -14,7 +14,7 @@ spec:
   type: Scala
   sparkVersion: 3.4.0
   mode: cluster
-  image: {{dag_run.conf.get("airgap_registry_url", "")}}gcr.io/mapr-252711/ezaf-spark-demo-example:fy23-q3-fts
+  image: {{dag_run.conf["airgap_registry_url"]|default("", True)}}gcr.io/mapr-252711/ezaf-spark-demo-example:fy23-q3-fts
   imagePullPolicy: Always
   mainApplicationFile: local:///tmp/DataProcessTransfer.jar
   mainClass: com.mapr.sparkdemo.DataProcessTransfer
