--- a/Data-Engineering/Airflow/example_spark_pi.yaml
+++ b/Data-Engineering/Airflow/example_spark_pi.yaml
@@ -7,7 +7,7 @@ spec:
   type: Scala
   sparkVersion: 3.4.0
   mode: cluster
-  image: {{dag_run.conf.get("airgap_registry_url", "")}}gcr.io/mapr-252711/spark-3.4.0:v3.4.0
+  image: {{dag_run.conf["airgap_registry_url"]|default("", True)}}gcr.io/mapr-252711/spark-3.4.0:v3.4.0
   imagePullPolicy: Always
   imagePullSecrets:
   - imagepull
