Endpoint updated to internal endpoint.

--- a/E2E-Demos/Investment-Banking/Spark/spark_etl_new.yaml
+++ b/E2E-Demos/Investment-Banking/Spark/spark_etl_new.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   sparkConf:
     # S3 credentials should be specified below
-    spark.hadoop.fs.s3a.endpoint: "https://home.hpe-apps-ezaf.com:31900"
+    spark.hadoop.fs.s3a.endpoint: "https://objectstore-zone1-svc.dataplatform.svc.cluster.local:9000/"
     spark.hadoop.fs.s3a.access.key: "minioadmin"
     spark.hadoop.fs.s3a.secret.key: "minioadmin"
     spark.hadoop.fs.s3a.path.style.access: "true"
