Update s3-endpoint in kserve object store s3 secret

--- a/Data-Science/MLflow/kserve/kserve-objectstore-s3-secret.yaml
+++ b/Data-Science/MLflow/kserve/kserve-objectstore-s3-secret.yaml
@@ -8,7 +8,7 @@ kind: Secret
 metadata:
   annotations:
     serving.kserve.io/s3-cabundle: ""
-    serving.kserve.io/s3-endpoint: minio-s3-service.ezdata-system.svc.cluster.local:30000/
+    serving.kserve.io/s3-endpoint: "local-s3-service.ezdata-system.svc.cluster.local:30000/"
     serving.kserve.io/s3-useanoncredential: "false"
     serving.kserve.io/s3-usehttps: "0"
     serving.kserve.io/s3-verifyssl: "0"
