--- a/Data-Science/MLflow/kserve/kserve-objectstore-s3-secret.yaml
+++ b/Data-Science/MLflow/kserve/kserve-objectstore-s3-secret.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 stringData:
   AWS_ACCESS_KEY_ID: # access_token
   AWS_SECRET_ACCESS_KEY: # s3
-  MLFLOW_S3_ENDPOINT_URL: # mlflow s3 endpoint url
-  MLFLOW_S3_IGNORE_TLS: true
 kind: Secret
 metadata:
   annotations:
     serving.kserve.io/s3-cabundle: ""
-    serving.kserve.io/s3-endpoint: minio-s3-service.ezdata-system.svc.cluster.local:30000/
+    serving.kserve.io/s3-endpoint: "local-s3-service.ezdata-system.svc.cluster.local:30000/"
     serving.kserve.io/s3-useanoncredential: "false"
     serving.kserve.io/s3-usehttps: "0"
     serving.kserve.io/s3-verifyssl: "0"
