fix object store secret name

--- a/Data-Science/MLflow/kserve/kserve-minio-secret.yaml
+++ b/Data-Science/MLflow/kserve/kserve-minio-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: kserve-minio-secret
   namespace: user-namespace
 secrets:
-- name: user-namespace-objectstore-secret
+- name: objectstore-s3-secret
