--- a/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
@@ -26,7 +26,7 @@ spec:
   arguments:
     -  s3a://ezua-demo/data/financial.csv       # source path
     - parquet                                          # source format
-    - file:///mnt/user/{{dag_run.conf.get("training_path", "financial-processed")}} # destination path
+    - file:///mnt/shared/financial-processed # destination path
     - parquet                                          # destination format
   restartPolicy:
     type: Never
