--- a/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
@@ -21,10 +21,10 @@ spec:
   mode: cluster
   image: gcr.io/mapr-252711/spark-3.4.1:v3.4.1
   imagePullPolicy: Always
-  mainApplicationFile: "local:///mnt/shared/spark/DataProcessTransfer.jar"
+  mainApplicationFile: "local:///mnt/sharedspark/DataProcessTransfer.jar"
   mainClass: com.mapr.sparkdemo.DataProcessTransfer
   arguments:
-    - s3a://ezua-demo/data/financial.csv       # source path
+    - s3a://ezua-demo/data/       # source path
     - csv                                          # source format
     - file:///mnt/shared/financial-processed # destination path
     - parquet                                          # destination format
@@ -37,7 +37,7 @@ spec:
       version: 3.4.1
     volumeMounts:
       - name: dev2-volume
-        mountPath: /mnt/dev2-volume
+        mountPath: /mnt/user
       - name: shared-volume
         mountPath: /mnt/shared
   executor:
@@ -45,13 +45,13 @@ spec:
       version: 3.4.1
     volumeMounts:
       - name: dev2-volume
-        mountPath: /mnt/dev2-volume
+        mountPath: /mnt/user
       - name: shared-volume
         mountPath: /mnt/shared
   volumes:
-    # - name: dev2-volume
-    #   persistentVolumeClaim:
-    #     claimName: user-pvc
+  #   - name: hpedemo-user01-volume
+  #     persistentVolumeClaim:
+  #       claimName: user-pvc
     - name: shared-volume
       persistentVolumeClaim:
         claimName: kubeflow-shared-pvc
