--- a/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
@@ -21,10 +21,10 @@ spec:
   mode: cluster
   image: gcr.io/mapr-252711/spark-3.4.1:v3.4.1
   imagePullPolicy: Always
-  mainApplicationFile: "local:///mnt/sharedspark/DataProcessTransfer.jar"
+  mainApplicationFile: "local:///mnt/shared/spark/DataProcessTransfer.jar"
   mainClass: com.mapr.sparkdemo.DataProcessTransfer
   arguments:
-    - s3a://ezua-demo/data/       # source path
+    - s3a://ezua-demo/data       # source path
     - csv                                          # source format
     - file:///mnt/shared/financial-processed # destination path
     - parquet                                          # destination format
