Updated Spark Analytics examples and Investment banking example

--- a/E2E-Demos/Investment-Banking/Grafana/grafana.yaml
+++ b/E2E-Demos/Investment-Banking/Grafana/grafana.yaml
@@ -7,7 +7,7 @@ spec:
         gateways:
         - istio-system/ezaf-gateway
         host:
-        - grafana.hpe-staging-ezaf.com
+        - grafana.hpe-apps-ezaf.com
         http:
         - match:
                 -uri:
