--- a/E2E-Demos/Investment-Banking/Airflow/spark_etl_new.yaml
+++ b/E2E-Demos/Investment-Banking/Airflow/spark_etl_new.yaml
@@ -2,18 +2,17 @@ apiVersion: "sparkoperator.hpe.com/v1beta2"
 kind: SparkApplication
 metadata:
   name: "spark-etl"
-  namespace: "hpedemo-user01"
 spec:
   sparkConf:
-    spark.executorEnv.SPARK_USER: hpedemo-user01
-    spark.hadoop.fs.s3a.access.key: <access-key>
-    spark.hadoop.fs.s3a.secret.key: <secret-key>
-    spark.hadoop.fs.s3a.endpoint: "ua01.hpe-minio-ezaf.com:9000"
-    spark.hadoop.fs.s3a.impl: "org.apache.hadoop.fs.s3a.S3AFileSystem"
-    spark.driver.extraJavaOptions: "-Dcom.amazonaws.sdk.disableCertChecking=true"
-    spark.executor.extraJavaOptions: "-Dcom.amazonaws.sdk.disableCertChecking=true"
     spark.hadoop.fs.s3a.path.style.access: "true"
-    spark.hadoop.fs.s3a.connection.ssl.enabled: "true"
+    spark.hadoop.fs.s3a.impl: "org.apache.hadoop.fs.s3a.S3AFileSystem"
+    spark.hadoop.fs.s3a.connection.ssl.enabled: "false"
+    spark.hadoop.fs.s3a.access.key: <access-key>
+    spark.hadoop.fs.s3a.secret.key: s3
+    spark.hadoop.fs.s3a.s3.client.factory.impl: org.apache.hadoop.fs.s3a.NonChunkedDefaultS3ClientFactory
+    spark.driver.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
+    spark.executor.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
+    spark.hadoop.fs.s3a.bucket.ezua-demo.endpoint: http://local-s3-service.ezdata-system.svc.cluster.local:30000
   type: Python
   sparkVersion: 3.4.1
   mode: cluster
@@ -27,20 +26,6 @@ spec:
   driver:
     labels:
       version: 3.4.1
-    volumeMounts:
-      - name: hpedemo-user01-volume
-        mountPath: /mnt/user
-      - name: shared-volume
-        mountPath: /mnt/shared
   executor:
     labels:
       version: 3.4.1
-    volumeMounts:
-      - name: hpedemo-user01-volume
-        mountPath: /mnt/user
-      - name: shared-volume
-        mountPath: /mnt/shared
-  volumes:
-    - name: shared-volume
-      persistentVolumeClaim:
-        claimName: kubeflow-shared-pvc
