--- a/E2E-Demos/Investment-Banking/Airflow/spark_etl_new.yaml
+++ b/E2E-Demos/Investment-Banking/Airflow/spark_etl_new.yaml
@@ -7,8 +7,7 @@ spec:
     spark.hadoop.fs.s3a.path.style.access: "true"
     spark.hadoop.fs.s3a.impl: "org.apache.hadoop.fs.s3a.S3AFileSystem"
     spark.hadoop.fs.s3a.connection.ssl.enabled: "false"
-    spark.hadoop.fs.s3a.access.key: {{dag_run.conf.get("jwt_token", "")}}
-    spark.hadoop.fs.s3a.secret.key: s3
+    spark.mapr.extraconf.secret: "<k8s-secret-name>" 
     spark.hadoop.fs.s3a.s3.client.factory.impl: org.apache.hadoop.fs.s3a.NonChunkedDefaultS3ClientFactory
     spark.driver.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
     spark.executor.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
