--- a/Data-Analytics/Spark/k8s/DataTransferMnist-JarLocal-3.3.1.yaml
+++ b/Data-Analytics/Spark/k8s/DataTransferMnist-JarLocal-3.3.1.yaml
@@ -2,14 +2,17 @@ apiVersion: "sparkoperator.hpe.com/v1beta2"
 kind: SparkApplication
 metadata:
   name: data-transfer-mnist-s3-secret-demo
-  namespace: spark
+  namespace: <username>
 spec:
   sparkConf:
     spark.hadoop.fs.s3a.path.style.access: "true"
     spark.hadoop.fs.s3a.impl: "org.apache.hadoop.fs.s3a.S3AFileSystem"
-    spark.hadoop.fs.s3a.connection.ssl.enabled: "true"
-    "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
-    "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking=true"
+    spark.hadoop.fs.s3a.connection.ssl.enabled: "false"
+    spark.mapr.extraconf.secret: "<k8s-secret-name>" 
+    spark.hadoop.fs.s3a.s3.client.factory.impl: org.apache.hadoop.fs.s3a.NonChunkedDefaultS3ClientFactory
+    spark.driver.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
+    spark.executor.extraClassPath: /mounts/shared-volume/spark/disable-chunk-encoding-334.jar
+    spark.hadoop.fs.s3a.bucket.ezua-demo.endpoint: http://local-s3-service.ezdata-system.svc.cluster.local:30000
   type: Scala
   sparkVersion: 3.3.1
   mode: cluster
@@ -18,42 +21,27 @@ spec:
   mainApplicationFile: local:///tmp/DataTransfer.jar
   mainClass: com.mapr.sparkdemo.DataTransfer
   arguments:
-    - s3a://ezaf-demo/data/mnist
+    - s3a://ezua-demo/data/mnist
     - binaryFile
-    - file:///mounts/data/mnist-spark-data
+    - file:///mounts/shared-volume/mnist-spark-data
     - parquet
   restartPolicy:
     type: Never
   imagePullSecrets:
-    - hpe-imagepull-secrets
+    - imagepull
   driver:
-    cores: 1
-    coreLimit: "1000m"
-    memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.1
     volumeMounts:
-      - mountPath: /mounts/data/
-        name: spark-data
-      - mountPath: /opt/mapr/kubernetes/spark_secrets
-        name: spark-s3-config
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
   executor:
-    cores: 1
-    instances: 2
-    memory: "512m"
     labels:
-      version: 3.3.1
+      version: 3.4.1
     volumeMounts:
-      - mountPath: /mounts/data
-        name: spark-data
-      - mountPath: /opt/mapr/kubernetes/spark_secrets
-        name: spark-s3-config
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
   volumes:
-    - name: spark-data
+    - name: shared-volume
       persistentVolumeClaim:
-        claimName:  <username>-<namespace>-pvc
-    - name: spark-s3-config
-      secret:
-        secretName: spark-s3-creds
-        defaultMode: 400
-        optional: false
+        claimName: kubeflow-shared-pvc
